change: update download image

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         <div class="container">
             <h2>Download MenuBro</h2>
             <p>Get started with MenuBro today and enhance your browsing experience.</p>
-            <a href="https://apps.apple.com/us/app/menubro/id6745024185" class="cta-button">Download for macOS</a>
+            <a href="https://apps.apple.com/us/app/menubro/id6745024185">
+                <img src="images/app-download-badge.svg" alt="Download on the App Store" class="app-store-badge">
+            </a>
             <p class="version-info">Current Version: 1.0.0 | Release Date: May 1, 2025</p>
         </div>
     </section>
