--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html#features">Features</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                    <li><a href="https://apps.apple.com/us/app/menubro/id6745024185" class="download-btn">Download</a></li>
+                    <li><a href="index.html#download" class="download-btn">Download</a></li>
                 </ul>
             </nav>
         </div>
